Adjust last row of brand letters to the left to prevent to big spaces between them on mobile and tablets

--- a/src/Creativestyle_BrandManagementExtension/web/css/_brands-index.scss
+++ b/src/Creativestyle_BrandManagementExtension/web/css/_brands-index.scss
@@ -159,6 +159,15 @@ $namespace: 'cs-';
         @include media('>=tablet') {
             flex-wrap: nowrap;
         }
+
+        &::after {
+            content: '';
+            flex: auto;
+
+            @include media('>=laptop') {
+                display: none;
+            }
+        }
     }
 
     &__letter-link {
